docs/wiki-versions/v0.6.0/wiki/Home.md
> **Note**: This documentation is for ClickGraph v0.6.0. [View latest docs →](../../wiki/Home.md)
# Welcome to ClickGraph

**Caution:** This entire document is AI-generated. It may contain mistakes. Double check and kindly raise issues and corrections if you find any.

**ClickGraph** is a high-performance, stateless graph query engine that brings the power of graph analytics to ClickHouse® as well as ClickHouse's analytical functions to graph queries. Execute Cypher queries on your existing ClickHouse data without migration or duplication.

## 🚀 Why ClickGraph?

### Transform ClickHouse into a Graph Database
- **Zero Migration**: Use your existing ClickHouse tables as graph nodes and relationships. Instantly convert your ClickHouse database into a graph database.
- **OLAP Performance**: Leverage ClickHouse's columnar storage for analytical graph workloads
- **Massive Scale**: Process billions of edges with sub-second query times

### Neo4j Ecosystem Compatible
- **Bolt Protocol v5.8**: Connect with Neo4j Browser, Desktop, and all official drivers
- **Cypher Language**: Write familiar Cypher queries with 90%+ syntax compatibility
- **Tool Integration**: Use existing Neo4j tools and workflows

### Production-Ready Architecture
- **Stateless Design**: No additional storage layer or data duplication
- **Dual Protocol Support**: HTTP REST API and Bolt protocol simultaneously
- **Multi-Tenancy**: Row-level security with parameterized views
- **RBAC**: ClickHouse native role-based access control

## ⚡ Quick Start (5 Minutes)

Get ClickGraph running in 5 minutes with our pre-built Docker image:

```bash
# 1. Pull the latest Docker image
docker pull genezhang/clickgraph:latest

# 2. Start ClickHouse
docker run -d --name clickhouse \
  -p 8123:8123 \
  -e CLICKHOUSE_DB=brahmand \
  -e CLICKHOUSE_USER=test_user \
  -e CLICKHOUSE_PASSWORD=test_pass \
  clickhouse/clickhouse-server:latest

# 3. Run ClickGraph with ClickHouse credentials
docker run -d --name clickgraph \
  --link clickhouse:clickhouse \
  -p 8080:8080 \
  -p 7687:7687 \
  -e CLICKHOUSE_URL="http://clickhouse:8123" \
  -e CLICKHOUSE_USER="test_user" \
  -e CLICKHOUSE_PASSWORD="test_pass" \
  -e CLICKHOUSE_DATABASE="brahmand" \
  genezhang/clickgraph:latest

# 4. Run your first query
curl -X POST http://localhost:8080/query \
  -H "Content-Type: application/json" \
  -d '{"query": "MATCH (u:User) RETURN u.name LIMIT 5"}'
```

**📌 Important**: ClickGraph requires ClickHouse credentials via environment variables:
- `CLICKHOUSE_URL` - ClickHouse server URL
- `CLICKHOUSE_USER` - Database username
- `CLICKHOUSE_PASSWORD` - Database password
- `CLICKHOUSE_DATABASE` - Default database name

**Result**: Your first graph query in 5 minutes! 🎉

👉 **[Complete Quick Start Guide →](Quick-Start-Guide.md)**

## 📚 Documentation

### Getting Started
- **[Quick Start Guide](Quick-Start-Guide.md)** - 5-minute Docker setup
- **[Installation Guide](Installation-Guide.md)** - Detailed installation options
- **[Your First Graph](Your-First-Graph.md)** - Build a simple social network graph

### Learning Cypher
- **[Basic Patterns](Cypher-Basic-Patterns.md)** - Node and edge matching patterns
- **[Multi-Hop Traversals](Cypher-Multi-Hop-Traversals.md)** - Variable-length paths and shortest paths
- **[Aggregations & Functions](Cypher-Functions.md)** - COUNT, SUM, string functions, and more
- **[Optional Match](Cypher-Optional-Match.md)** - LEFT JOIN semantics for optional patterns
- **[Advanced Patterns](Cypher-Advanced-Patterns.md)** - CASE, UNION, complex queries

### Schema Configuration
- **[Schema Basics](Schema-Basics.md)** - YAML schema configuration
- **[Schema Configuration Advanced](Schema-Configuration-Advanced.md)** - Auto-discovery, FINAL, view parameters
- **[Schema FK-Edge Patterns](Schema-FK-Edge-Patterns.md)** - Self-referencing FK for hierarchies (file systems, org charts)
- **[Edge ID Best Practices](Edge-ID-Best-Practices.md)** - Optimize edge uniqueness tracking (v0.5.2+)
- **[Schema Polymorphic Edges](Schema-Polymorphic-Edges.md)** - Multiple edge types in single table (v0.5.2+)
- **[Schema Denormalized Properties](Schema-Denormalized-Properties.md)** - 10-100x faster queries without JOINs (v0.5.2+)
- **[Multi-Tenancy Patterns](Multi-Tenancy-Patterns.md)** - Tenant isolation and RBAC (v0.5.0+)

### Production Deployment
- **[Docker Deployment](Docker-Deployment.md)** - Production Docker setup
- **[Kubernetes Deployment](Kubernetes-Deployment.md)** - Helm charts and K8s manifests
- **[Production Best Practices](Production-Best-Practices.md)** - Security, performance, monitoring
- **[Performance Tuning](Performance-Query-Optimization.md)** - Query and schema optimization

### Integrations
- **[AI Assistant Integration (MCP)](AI-Assistant-Integration-MCP.md)** - 🤖 Use ClickGraph with Claude and other AI assistants via Model Context Protocol

### Use Cases & Examples
- **[Social Network Analysis](Use-Case-Social-Network.md)** - Friend recommendations and communities
- **[Fraud Detection](Use-Case-Fraud-Detection.md)** - Transaction network analysis
- **[Knowledge Graphs](Use-Case-Knowledge-Graphs.md)** - Entity relationships and semantic queries

### Reference
- **[Cypher Language Reference](Cypher-Language-Reference.md)** - Complete syntax reference
- **[Configuration Reference](../configuration.md)** - CLI options and environment variables
- **[API Reference](API-Reference-HTTP.md)** - HTTP REST API documentation
- **[Known Limitations](Known-Limitations.md)** - Current limitations and workarounds

## 🎯 Key Features

### Graph Query Language
```cypher
-- Find friends of friends
MATCH (me:User {name: 'Alice'})-[:FOLLOWS*2]->(friend)
RETURN friend.name, friend.country

-- Shortest path between users
MATCH path = shortestPath((a:User)-[:FOLLOWS*]-(b:User))
WHERE a.name = 'Alice' AND b.name = 'Bob'
RETURN length(path), nodes(path)

-- Aggregate follower counts
MATCH (u:User)<-[:FOLLOWS]-(follower)
RETURN u.name, count(follower) as followers
ORDER BY followers DESC
LIMIT 10
```

### Flexible Schema Mapping
```yaml
# Map existing ClickHouse tables to graph schema
nodes:
  User:
    source_table: users
    node_id: user_id
    property_mappings:
      name: full_name
      email: email_address
      
relationships:
  FOLLOWS:
    source_table: user_follows
    from_node: User
    to_node: User
    from_id: follower_id
    to_id: followed_id
```

### Multi-Protocol Access
```python
# HTTP REST API
import requests
response = requests.post('http://localhost:8080/query', 
    json={'query': 'MATCH (u:User) RETURN u.name LIMIT 5'})

# Neo4j Bolt Protocol
from neo4j import GraphDatabase
driver = GraphDatabase.driver("bolt://localhost:7687")
with driver.session() as session:
    result = session.run("MATCH (u:User) RETURN u.name LIMIT 5")
```

## 📊 Performance at Scale

**Benchmark Results** (ClickHouse on commodity hardware):

| Dataset | Nodes | Edges | Query Time |
|---------|-------|-------|------------|
| Small | 1K users | 100K edges | 2.0s mean |
| Medium | 10K users | 1M edges | 2.1s mean |
| Large | 100K users | 10M edges | 3-5s typical |

*Only 0.5% overhead for 10x data scale!*

Key performance features:
- **Query Cache**: 10-100x speedup for repeated queries
- **Filter Pushdown**: Execute filters in ClickHouse for optimal performance
- **Index Utilization**: Leverages ClickHouse indexes automatically
- **Parallel Execution**: Multi-core query processing

## 🛠️ What You Can Build

### Social Networks
- Friend recommendations
- Community detection
- Influence analysis
- Network visualization

### Fraud Detection
- Transaction pattern analysis
- Account relationship mapping
- Anomaly detection
- Risk scoring

### Knowledge Graphs
- Entity relationships
- Semantic search
- Hierarchical taxonomies
- Question answering

### Recommendation Systems
- Collaborative filtering
- Content-based recommendations
- Graph-based similarity
- Real-time personalization

## 🔐 Enterprise Features

- **Multi-Tenancy**: Row-level security with parameterized views
- **RBAC**: ClickHouse native role-based access control
- **Authentication**: Multiple auth schemes (basic, none, custom)
- **TLS Support**: Secure connections with TLS encryption
- **Audit Logging**: Query audit trails via ClickHouse logs
- **High Availability**: Stateless design for easy horizontal scaling

## 🚦 Current Status

**Version**: v0.5.4 (December 2025)

**Production-Ready Features**:
- ✅ Core Cypher queries (MATCH, WHERE, RETURN, WITH)
- ✅ Variable-length paths (`*`, `*1..3`, `*..5`)
- ✅ Shortest path algorithms
- ✅ OPTIONAL MATCH (LEFT JOIN semantics)
- ✅ Multiple relationship types (`[:TYPE1|TYPE2]`)
- ✅ Undirected relationships
- ✅ Neo4j Bolt protocol v5.8
- ✅ Query caching (10-100x speedup)
- ✅ 25+ Neo4j function mappings
- ✅ Multi-tenancy with parameterized views
- ✅ RBAC with SET ROLE support
- ✅ Cross-table query correlation (v0.5.4)
- ✅ Smart type inference for anonymous patterns (v0.5.4)
- ✅ FK-Edge patterns for hierarchies (v0.5.4)
- ✅ String predicates: STARTS WITH, ENDS WITH, CONTAINS (v0.5.4)
- ✅ UNWIND for array expansion (v0.5.2+)

**Test Coverage**: 596 Rust unit tests (100%) + 782 Python integration tests (100%)  
**Total**: 1,378 tests passing

**Read-Only Focus**: ClickGraph is optimized for analytical queries. Write operations (`CREATE`, `SET`, `DELETE`, `MERGE`) are not supported.

👉 **[See Complete Feature List →](../features.md)**

## 🤝 Community & Support

### Get Help
- **[Troubleshooting Guide](Troubleshooting-Guide.md)** - Common issues and solutions
- **[GitHub Issues](https://github.com/genezhang/clickgraph/issues)** - Report bugs or request features
- **[GitHub Discussions](https://github.com/genezhang/clickgraph/discussions)** - Ask questions and share ideas

### Contributing
- **[Contributing Guide](Contributing-Guide.md)** - How to contribute
- **[Development Setup](../development/environment-checklist.md)** - Set up development environment
- **[Testing Guide](../development/testing.md)** - Run and write tests

### Resources
- **[GitHub Repository](https://github.com/genezhang/clickgraph)** - Source code and releases
- **[Changelog](../../CHANGELOG.md)** - Version history and updates
- **[Roadmap](../../ROADMAP.md)** - Future plans and priorities

## 🎓 Learning Path

**New to ClickGraph?** Follow this path:

1. **[Quick Start Guide](Quick-Start-Guide.md)** (5 min) - Get it running
2. **[Your First Graph](Your-First-Graph.md)** (15 min) - Build a simple graph
3. **[Basic Patterns](Cypher-Basic-Patterns.md)** (30 min) - Learn core Cypher
4. **[Schema Basics](Schema-Basics.md)** (20 min) - Configure your schema
5. **[Multi-Hop Traversals](Cypher-Multi-Hop-Traversals.md)** (30 min) - Advanced graph queries

**Ready for Production?** Continue here:

6. **[Docker Deployment](Docker-Deployment.md)** - Production deployment
7. **[Production Best Practices](Production-Best-Practices.md)** - Security and performance
8. **[Multi-Tenancy Patterns](../multi-tenancy.md)** - Tenant isolation
9. **[Performance Tuning](Performance-Query-Optimization.md)** - Optimize queries

**Want to Go Deeper?** Explore advanced topics:

10. **[Architecture](Architecture-Overview.md)** - System internals
11. **[Cypher-to-SQL Translation](Cypher-To-SQL-Translation.md)** - How queries are converted
12. **[Extension Development](Extension-Development.md)** - Add new features

## 📖 Quick Reference

### Cypher Syntax
```cypher
-- Basic pattern matching
MATCH (n:Label) WHERE n.property = value RETURN n

-- Relationships
MATCH (a)-[:TYPE]->(b) RETURN a, b

-- Variable-length paths
MATCH (a)-[:TYPE*1..3]->(b) RETURN a, b

-- Shortest path
MATCH path = shortestPath((a)-[:TYPE*]-(b)) RETURN path

-- Optional patterns
OPTIONAL MATCH (a)-[:TYPE]->(b) RETURN a, b

-- Aggregations
MATCH (a)-[:TYPE]->(b) RETURN a, count(b) as total
```

### CLI Commands
```bash
# Start with default configuration
cargo run --bin clickgraph

# Custom ports
cargo run --bin clickgraph -- --http-port 8081 --bolt-port 7688

# Disable Bolt protocol
cargo run --bin clickgraph -- --disable-bolt

# Show help
cargo run --bin clickgraph -- --help
```

### Environment Variables
```bash
# ClickHouse connection (required)
export CLICKHOUSE_URL="http://localhost:8123"
export CLICKHOUSE_USER="test_user"
export CLICKHOUSE_PASSWORD="test_pass"
export CLICKHOUSE_DATABASE="brahmand"

# Graph schema (required)
export GRAPH_CONFIG_PATH="./schemas/my_graph.yaml"
```

## 🚀 Next Steps

Ready to get started? Choose your path:

- 🏃 **Quick Start**: [5-minute setup with Docker →](Quick-Start-Guide.md)
- 📘 **Learn Cypher**: [Basic query patterns →](Cypher-Basic-Patterns.md)
- ⚙️ **Configure Schema**: [YAML schema guide →](Schema-Basics.md)
- 🏭 **Deploy to Production**: [Docker deployment guide →](Docker-Deployment.md)
- 🎯 **See Examples**: [Use case examples →](Use-Case-Social-Network.md)

---

**ClickGraph** - Bringing graph analytics to ClickHouse at massive scale 🚀

*Built with Rust • MIT License • [GitHub](https://github.com/genezhang/clickgraph)*
